# beekeeper

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: lint.yml  pages-build-deployment.yml
_beekeeper/beekeeper/_bundle/: __init__.py
beekeeper-core/: README.md  pyproject.toml
beekeeper-core/beekeeper/core/: __init__.py  schema.py
beekeeper-extensions/embeddings/huggingface/: README.md  pyproject.toml
beekeeper-extensions/embeddings/watsonx/: README.md  pyproject.toml
beekeeper-extensions/embeddings/watsonx/beekeeper/embeddings/watsonx/: base.py
beekeeper-extensions/guardrails/watsonx/: pyproject.toml
beekeeper-extensions/llms/litellm/: README.md  pyproject.toml
beekeeper-extensions/monitors/watsonx/: pyproject.toml
beekeeper-extensions/monitors/watsonx/beekeeper/monitors/watsonx/: __init__.py  base.py  custom_metric.py
beekeeper-extensions/monitors/watsonx/beekeeper/monitors/watsonx/supporting_classes/: enums.py
beekeeper-extensions/observers/watsonx/: README.md  pyproject.toml
beekeeper-extensions/readers/docling/: README.md  pyproject.toml
beekeeper-extensions/readers/file/: README.md  pyproject.toml
beekeeper-extensions/readers/file/beekeeper/readers/file/: docx.py  html.py  json.py  pdf.py
beekeeper-extensions/readers/ibm-cos/: README.md  pyproject.toml
beekeeper-extensions/readers/ibm_cos/: pyproject.toml
beekeeper-extensions/readers/watson-discovery/: README.md  pyproject.toml
beekeeper-extensions/readers/watson_discovery/: pyproject.toml
beekeeper-extensions/retrievers/watson_discovery/: README.md  pyproject.toml
beekeeper-extensions/vector_stores/chroma/: README.md  pyproject.toml
beekeeper-extensions/vector_stores/elasticsearch/: README.md  pyproject.toml
beekeeper-integrations/embeddings/huggingface/: README.md  pyproject.toml
beekeeper-integrations/embeddings/huggingface/beekeeper/embeddings/huggingface/: __init__.py  base.py
beekeeper-integrations/embeddings/watsonx/: README.md  pyproject.toml
beekeeper-integrations/guardrails/watsonx/: README.md  pyproject.toml
beekeeper-integrations/guardrails/watsonx/beekeeper/guardrails/watsonx/: __init__.py  base.py
beekeeper-integrations/llms/litellm/: README.md  pyproject.toml
beekeeper-integrations/llms/litellm/beekeeper/llms/litellm/: __init__.py  base.py
beekeeper-integrations/llms/watsonx/: README.md  pyproject.toml
beekeeper-integrations/llms/watsonx/beekeeper/llms/watsonx/: __init__.py  base.py
beekeeper-integrations/loader/ibm_cos/: pyproject.toml
beekeeper-integrations/loaders/docling/: README.md  pyproject.toml
beekeeper-integrations/loaders/docling/beekeeper/loaders/docling/: __init__.py  base.py
beekeeper-integrations/loaders/file/: README.md  pyproject.toml
beekeeper-integrations/loaders/file/beekeeper/loaders/file/: __init__.py  docx.py  html.py  json.py  pdf.py
beekeeper-integrations/loaders/ibm_cos/: README.md  pyproject.toml
beekeeper-integrations/loaders/ibm_cos/beekeeper/loaders/ibm_cos/: __init__.py  base.py
beekeeper-integrations/loaders/watson_discovery/: README.md  pyproject.toml
beekeeper-integrations/monitors/watsonx/: pyproject.toml
beekeeper-integrations/observability/watsonx/: README.md  pyproject.toml
beekeeper-integrations/observability/watsonx/beekeeper/observability/watsonx/: __init__.py  base.py  custom_metric.py  external_prompt_monitor.py  prompt_monitor.py
beekeeper-integrations/observability/watsonx/beekeeper/observability/watsonx/supporting_classes/: clients.py  credentials.py  metric.py
beekeeper-integrations/observers/watsonx/: pyproject.toml
beekeeper-integrations/readers/docling/: pyproject.toml
beekeeper-integrations/readers/file/: pyproject.toml
beekeeper-integrations/readers/ibm_cos/: pyproject.toml
beekeeper-integrations/readers/watson_discovery/: pyproject.toml
beekeeper-integrations/retrievers/watson_discovery/: README.md  pyproject.toml
beekeeper-integrations/retrievers/watson_discovery/beekeeper/retrievers/watson_discovery/: __init__.py  base.py
beekeeper-integrations/vector_stores/chroma/: README.md  pyproject.toml
docs/: conf.py  index.rst  install.rst
docs/api_reference/: mkdocs.yml  pyproject.toml
docs/api_reference/api_reference/: index.md
docs/api_reference/api_reference/embeddings/: huggingface.md  watsonx.md
docs/api_reference/api_reference/evaluation/: answer_context_similarity.md  context_similarity.md  query_context_similarity.md
docs/api_reference/api_reference/flows/: ingestion_flow.md
docs/api_reference/api_reference/guardrails/: watsonx.md
docs/api_reference/api_reference/llms/: litellm.md  watsonx.md
docs/api_reference/api_reference/loaders/: directory.md  docling.md  file.md  ibm_cos.md  watson_discovery.md
docs/api_reference/api_reference/migration_guide/: migrating-from-v1-x-to-v2-x.md
docs/api_reference/api_reference/monitors/: watsonx.md
docs/api_reference/api_reference/observability/: watsonx.md
docs/api_reference/api_reference/observers/: watsonx.md
docs/api_reference/api_reference/prompt/: prompt_template.md
docs/api_reference/api_reference/readers/: directory.md  file.md  ibm_cos.md
docs/api_reference/api_reference/retrievers/: watson_discovery.md
docs/api_reference/api_reference/text_chunker/: token.md
docs/api_reference/api_reference/text_chunkers/: semantic.md  sentence.md
docs/api_reference/api_reference/vector_stores/: chroma.md  elasticsearch.md
docs/api_reference/api_reference/workflow/: ingestion_flow.md
docs/embeddings/: huggingface.rst  watsonx.rst
docs/evaluation/: context_similarity.rst
docs/flows/: ingestion_flow.rst
docs/llms/: litellm.rst
docs/observers/: ibm_watsonx_governance.rst
docs/prompts/: prompt_template.rst
docs/readers/: directory.rst  docling.rst  docx.rst  html.rst  ibm_cos.rst  json.rst  pdf.rst  watson_discovery.rst
docs/retrievers/: watson_discovery.rst
docs/schema/: document.rst  index.rst
docs/text_chunkers/: semantic.rst  sentence.rst  token.rst
docs/vector_stores/: chroma.rst  elasticsearch.rst
(+103 files in other folders)
