[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-docs"
version = "1.0.1"
description = "Beekeeper API Documentation"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs-include-dir-to-nav>=1.2.0",
]
