[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "beekeeper-docs"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
mkdocs = ">=1.6.1"
mkdocs-material = ">=9.6.20"
mkdocstrings = { version = ">=0.26.1", extras = ["python"] }
mkdocs-include-dir-to-nav = ">=1.2.0"
