[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-embeddings-watsonx"
version = "1.0.3"
description = "beekeeper embeddings watsonx extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ibm-watsonx-ai>=1.4.11,<2.0.0",
    "beekeeper-core>=1.0.8,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["beekeeper/"]

[tool.hatch.build.targets.wheel]
include = ["beekeeper/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.9",
]
