[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-monitors-watsonx"
version = "1.1.4"
description = "beekeeper monitors watsonx extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "certifi>=2025.11.12,<2026.0.0",
    "ipython==9.8.0",
    "ibm-aigov-facts-client>=1.0.207,<1.0.300",
    "ibm-watson-openscale>=3.1.3,<3.2.0",
    "ibm-watsonx-ai>=1.4.11,<2.0.0",
    "beekeeper-core>=1.0.8,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["beekeeper/"]

[tool.hatch.build.targets.wheel]
include = ["beekeeper/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.9",
]
