[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-readers-watson-discovery"
version = "1.0.0"
description = "beekeeper readers watson discovery extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "ibm-watson>=10.0.0,<11.0.0",
    "beekeeper-core>=1.0.0,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["beekeeper/"]

[tool.hatch.build.targets.wheel]
include = ["beekeeper/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
