[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-embeddings-huggingface"
version = "2.0.0b2"
description = "beekeeper embeddings huggingface integration"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sentence-transformers>=5.2.3,<6.0.0",
    "hf-xet>=1.4.2,<1.5.0",
    "beekeeper-core>=2.0.0b1,<3.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["beekeeper/"]

[tool.hatch.build.targets.wheel]
include = ["beekeeper/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
]
