[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-llms-litellm"
version = "2.0.0b1"
description = "beekeeper llms litellm integration"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "litellm>=1.81.13,<1.82.6",
    "beekeeper-core>=2.0.0b1,<3.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["beekeeper/"]

[tool.hatch.build.targets.wheel]
include = ["beekeeper/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
]
