[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-readers-docling"
version = "1.0.2"
description = "beekeeper readers docling extension"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "docling>=2.65.0,<3.0.0",
    "beekeeper-core>=1.0.8,<2.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["beekeeper/"]

[tool.hatch.build.targets.wheel]
include = ["beekeeper/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.9",
]
