[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beekeeper-loaders-file"
version = "2.0.0"
description = "beekeeper loaders file integration"
authors = [{ name = "Leonardo Furnielis", email = "leonardofurnielis@outlook.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3,<5.0.0",
    "pypdf>=6.7.1,<7.0.0",
    "jq>=1.11.0,<2.0.0",
    "docx2txt>=0.9,<1.0.0",
    "beekeeper-core>=2.0.0,<3.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["beekeeper/"]

[tool.hatch.build.targets.wheel]
include = ["beekeeper/"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.8",
]
